# mockapi

./: README.md  pyproject.toml
mockapi/: __init__.py  cli.py  server.py  spec.py
tests/: test_server.py
